crates/uselesskey-rustls/tests/snapshots/snapshots_rustls__rustls_chain_private_key_type.snap
---
source: crates/uselesskey-rustls/tests/snapshots_rustls.rs
expression: result
---
label: chain-leaf
key_type: PKCS8
key_der_len: "[REDACTED]"
