crates/uselesskey-rustls/tests/snapshots/snapshots_rustls__rustls_self_signed_cert_der_len.snap
---
source: crates/uselesskey-rustls/tests/snapshots_rustls.rs
expression: result
---
label: self-signed
cert_der_len: 758
