crates/uselesskey-rustls/tests/snapshots/snapshots_rustls__rustls_self_signed_private_key_type.snap
---
source: crates/uselesskey-rustls/tests/snapshots_rustls.rs
expression: result
---
label: self-signed
key_type: PKCS8
key_der_len: "[REDACTED]"
